сделал отдельный метод для пагинации